small tweaks to fix nowrap

--- a/homepagestyle.css
+++ b/homepagestyle.css
@@ -1,4 +1,5 @@
 body {
+  white-space: nowrap;
 	margin: 0;
 	padding: 0;
   background-color: #60788F;
